<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hijo_card"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_item"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                    android:id="@+id/nombre_hijo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_hijo"
                    android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_edad"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/edad_hijo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_edad"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sexo"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/sexo_hijo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_sexo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_id"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/id_hijo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_id_hijo"/>
            </LinearLayout>
        </LinearLayout>
       <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:orientation="vertical">

           <Button
               android:id="@+id/button_detalle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Detalle"
               android:layout_gravity="right"
               />
        </LinearLayout>


    </LinearLayout>



    </android.support.v7.widget.CardView>