<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".LoginActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/title_text"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blue_grey_500"
                    android:textSize="36sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/google_icon"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/agenda_pediatrica" />



                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signed_out"
                    android:textColor="@color/blue_grey_600"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeScrollbars="true"
                    android:gravity="center"
                    android:maxLines="5"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />


                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    />

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_button_continue"
                    android:visibility="gone"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    />

            </LinearLayout>

    </LinearLayout>

